--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -12,7 +12,6 @@
 body{
     margin: 0;
     font-family: sans-serif;
-    /* height: 100vh; */
 }
 
 
@@ -22,6 +21,7 @@ header{
     text-align: center;
     box-sizing: border-box;
     height: 15vh;
+    min-height: 90px;
     display: flex;
     flex-direction: column;
     justify-content: center;
