--- a/styles/choice.css
+++ b/styles/choice.css
@@ -1,22 +1,35 @@
 /*      =====   MAIN    =====    */
 main{
+    min-height: initial;
     display: grid;
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(3, 250px);
     row-gap: 100px;
     justify-content: space-evenly;
     padding: 100px 0;
 }
 .card{
-    text-align: center;
+    text-align: left;
     background-color: turquoise;
     height: 350px;
-    padding: 20px 0;
+    padding: 20px 20px;
+    cursor: pointer;
 }
 
 .card img {
     width: 150px;
     height: 150px;
+    margin: 0 auto;
+    display: block;
 }
+
 .card span {
     display: block;
+    margin: 10px 0;
+
+}
+
+.card span:first-of-type {
+    margin: 15px 0 20px;
+    text-align: center;
+    font-weight: 700;
 }
