--- a/styles/choice.css
+++ b/styles/choice.css
@@ -33,3 +33,13 @@ main{
     text-align: center;
     font-weight: 700;
 }
+
+#mensagem {
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    left: 50vw;
+    transform: translate(-50%);
+    background-color: lightgreen;
+}
