--- a/styles/choice.css
+++ b/styles/choice.css
@@ -9,10 +9,15 @@ main{
 }
 .card{
     text-align: left;
-    background-color: turquoise;
+    border-radius: 15px;
     height: 350px;
     padding: 20px 20px;
     cursor: pointer;
+    transition: .3s;
+}
+
+.card:hover {
+    box-shadow: rgb(78, 78, 78) 0px 0px 10px 1px;
 }
 
 .card img {
@@ -38,8 +43,34 @@ main{
     font-weight: 700;
     font-size: 20px;
     text-align: center;
-    position: absolute;
+    position: fixed;
     left: 50vw;
+    top: 15vh;
     transform: translate(-50%);
-    background-color: lightgreen;
+    background-color: rgba(255, 255, 255, 0.795);
+    box-shadow: 0px 0px 5px 1px;
+    border-radius: 10px;
+    padding: 10px;
+    display: none;
+}
+
+#mensagem a {
+    text-decoration: none;
+    color: gray;
+    display: block;
+    margin-top: 5px;
+    transition: .2s;
+}
+#mensagem a:hover {
+    color: black;
+}
+
+
+@media(max-width:800px) {
+    main {
+        grid-template-columns: repeat(auto-fit, 250px);
+        row-gap: 50px;
+        column-gap: 10px;
+        padding: 50px 0;
+    }
 }
